--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,11 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.racecondition.ribbit.app.LoginActivity">
+    tools:context="com.racecondition.ribbit.app.LoginActivity"
+    android:background="@drawable/background_fill">
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/backgroundImage"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="fitStart"
+        android:src="@drawable/background"
+        android:contentDescription="@string/content_desc_background" />
 
     <EditText
         android:id="@+id/usernameField"
@@ -57,5 +66,6 @@
         android:layout_below="@+id/signUpText"
         android:layout_marginTop="19dp"
         android:text="@string/forgot_pw_text" />
+
 
 </RelativeLayout>
