- Customized Text Views of Login Screen   - Customized EditText of Login Screen    - Generated 9-Patch Image for the EditText fields

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,5 @@
 <resources>
     <color name="background_purple">#462B6C</color>
+    <color name="light_gray">#bbbbbb</color>
+    <color name="apptheme_color">#6c4b95</color>
 </resources>
