--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,65 +7,101 @@
 
 
     <ImageView
+        android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/backgroundImage"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/content_desc_background"
         android:scaleType="fitStart"
-        android:src="@drawable/background"
-        android:contentDescription="@string/content_desc_background" />
+        android:src="@drawable/background" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="60sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:text="@string/subtitle"
+        android:textColor="@android:color/white"
+        android:textSize="13sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/editTextLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/subtitle"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/login_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/login_horizontal_padding"
+        android:paddingRight="@dimen/login_horizontal_padding"
+        android:paddingTop="@dimen/login_vertical_padding"
+        android:paddingBottom="@dimen/login_vertical_padding"
+        android:background="@android:color/white" >
 
     <EditText
         android:id="@+id/usernameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:ems="10"
-        android:hint="@string/username_hint" >
-
-        <requestFocus />
-    </EditText>
+        android:hint="@string/username_hint"
+        android:textColorHint="@color/light_gray"
+        android:textSize="17sp" />
 
     <EditText
         android:id="@+id/passwordField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/usernameField"
-        android:layout_below="@+id/usernameField"
         android:ems="10"
         android:hint="@string/password_hint"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColorHint="@color/light_gray"
+        android:textSize="17sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/passwordField"
-        android:layout_below="@+id/passwordField"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editTextLayout"
         android:text="@string/login_button_label" />
+
 
     <TextView
         android:id="@+id/signUpText"
-        android:layout_centerHorizontal="true"
-        android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/loginButton"
-        android:layout_marginTop="69dp"
-        android:text="@string/sign_up_text" />
+        android:layout_below="@id/loginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text="@string/sign_up_text"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/forgotPasswordText"
-        android:layout_centerHorizontal="true"
-        android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/forgot_pw_text"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/signUpText"
-        android:layout_marginTop="19dp"
-        android:text="@string/forgot_pw_text" />
-
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"
+        />
 
 </RelativeLayout>
