Created a Style...applied it to LoginActivity and SignUpActivity and ForgotPassword...but still need work on SignUp and Forgot

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,11 @@
 <resources>
 
-    <style name="AppTheme" parent="@style/_AppTheme" />
-
-    <style name="_AppTheme" parent="android:Theme.Holo.Light">
+    <style name="AppTheme" parent="android:Theme.Holo.Light">
         <item name="android:editTextBackground">@drawable/apptheme_edit_text_holo_light</item>
-        <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
     </style>
 
-
-
-    <style name="ImageButtonAppTheme" parent="android:Widget.Holo.Light.ImageButton">
-        <item name="android:background">@drawable/apptheme_btn_default_holo_light</item>
+    <style name="AuthBackground">
+        <item name="android:background">@drawable/background_fill</item>
     </style>
 
 </resources>
