--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.racecondition.ribbit.app.LoginActivity"
-    android:background="@drawable/background_fill">
-
+    style="@style/AuthBackground" >
 
     <ImageView
         android:id="@+id/backgroundImage"
