Added more Styles for Login, SignUp and Forgot Password

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,28 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/AuthBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.racecondition.ribbit.app.ForgotPasswordActivity"
-    style="@style/AuthBackground">
+    >
 
-    <EditText
-        android:id="@+id/resetEmailField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:hint="@string/forgot_password_hint" >
+    <ImageView
+        android:id="@+id/backgroundImage"
+        style="@style/AuthBackgroundImage"
+        android:contentDescription="@string/content_desc_background" />
 
-        <requestFocus />
+    <LinearLayout
+        android:id="@+id/editTextLayout"
+        style="@style/AuthFieldContainer">
+
+        <EditText
+            android:id="@+id/resetEmailField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:ems="10"
+            android:hint="@string/forgot_password_hint" >
+
+            <requestFocus />
     </EditText>
+    </LinearLayout>
 
     <Button
         android:id="@+id/resetPasswordButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/resetEmailField"
-        android:layout_below="@+id/resetEmailField"
+        android:layout_below="@+id/editTextLayout"
         android:text="@string/reset_password_button_label" />
 
 </RelativeLayout>
