Added Styles for the EditTexts and Buttons and added the Cancel Button for SignUpActivity

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -17,22 +17,18 @@
 
         <EditText
             android:id="@+id/resetEmailField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:ems="10"
+            style="@style/AuthEditText"
             android:hint="@string/forgot_password_hint" >
-
             <requestFocus />
     </EditText>
     </LinearLayout>
 
     <Button
         android:id="@+id/resetPasswordButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AuthButton"
+        android:text="@string/reset_password_button_label"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/editTextLayout"
-        android:text="@string/reset_password_button_label" />
+        />
 
 </RelativeLayout>
