--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,36 +24,25 @@
 
         <EditText
             android:id="@+id/usernameField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/username_hint"
-            android:textColorHint="@color/light_gray"
-            android:textSize="17sp" />
+            style="@style/AuthEditText"
+            android:hint="@string/username_hint" >
+        <requestFocus />
+        </EditText>
 
         <EditText
             android:id="@+id/passwordField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/password_hint"
+            style="@style/AuthEditText"
             android:inputType="textPassword"
-            android:textColorHint="@color/light_gray"
-            android:textSize="17sp" />
+            android:hint="@string/password_hint" >
+        </EditText>
     </LinearLayout>
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editTextLayout"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:background="@drawable/button_custom"
+        style="@style/AuthButton"
         android:text="@string/login_button_label"
-        android:textColor="@color/text_color"
-        android:textSize="13sp" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editTextLayout" />
 
     <TextView
         android:id="@+id/signUpText"
