customized action bar buttons added icons to tabs
replaced main.xml/android:showAsAction with
app:showAsAction

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,9 +9,8 @@
 
     <item android:id="@+id/action_camera"
         android:title="@string/menu_camera_label"
-        android:icon="@drawable/ic_action_camera"
-        android:showAsAction="always"
-        />
+        android:icon="@drawable/ic_menu_camera"
+        app:showAsAction="always" />
 
     <item android:id="@+id/action_logout"
         android:title="@string/menu_logout_label"
