--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,7 +3,7 @@
     style="@style/AuthBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbit.app.ForgotPasswordActivity"
+    tools:context="com.racecondition.ribbit.app.com.racecondition.ribbit.app.ui.ForgotPasswordActivity"
     >
 
     <ImageView
