--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbit.app.ViewImageActivity">
+    tools:context="com.racecondition.ribbit.app.com.racecondition.ribbit.app.ui.ViewImageActivity">
 
 
     <ImageView
