--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbit.app.MainActivity$PlaceholderFragment">
+    tools:context="com.racecondition.ribbit.app.com.racecondition.ribbit.app.ui.MainActivity$PlaceholderFragment">
 
 
     <ListView
