- setting the background color for the inbox  - adding margins to ListViews

--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -11,6 +11,8 @@
         android:id="@android:id/list"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:paddingBottom="@dimen/inbox_vertical_margin"
+        android:clipToPadding="false"
          />
     
     <TextView
