- Added a Swipe-To-Refresh feature in the Inbox

--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -4,21 +4,30 @@
     android:layout_height="match_parent"
     tools:context="com.racecondition.ribbit.app.com.racecondition.ribbit.app.ui.MainActivity$PlaceholderFragment">
 
-
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/list"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:paddingBottom="@dimen/inbox_vertical_margin"
+        android:layout_alignParentTop="true">
+
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:clipToPadding="false"
-         />
-    
+        android:paddingBottom="@dimen/inbox_vertical_margin" >
+    </ListView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
     <TextView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/empty_inbox_label"
-    />
+        android:text="@string/empty_inbox_label" />
 </RelativeLayout>
