- Starting a GridView for Friends

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,18 +5,18 @@
     tools:context="com.racecondition.ribbit.app.com.racecondition.ribbit.app.ui.MainActivity$PlaceholderFragment">
 
 
-    <ListView
+    <GridView
+        android:id="@+id/friendsGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/list"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-         />
-    
+        android:layout_alignParentTop="true">
+    </GridView>
+
     <TextView
         android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/empty_friends_label"
-    />
+        android:text="@string/empty_friends_label" />
+
 </RelativeLayout>
