--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -9,7 +9,9 @@
     <TextView
         android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
+        android:maxLines="2"
+        android:padding="4dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" />
 
