--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -13,8 +13,12 @@
         android:layout_alignParentTop="true"
         android:clipToPadding="false"
         android:horizontalSpacing="@dimen/user_grid_spacing"
-        android:numColumns="3"
-        android:verticalSpacing="@dimen/user_grid_spacing"  >
+        android:numColumns="auto_fit"
+        android:columnWidth="90dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="@dimen/user_grid_spacing"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"  >
 
     </GridView>
 
