--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     style="@style/AuthBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbitsdm.app.LoginActivity" >
+    tools:context="com.racecondition.ribbitsdm.app.ui.LoginActivity" >
 
     <ImageView
         android:id="@+id/backgroundImage"
