--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,4 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbitsdm.app.ui.MainActivity" />
+    tools:context="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
