--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     style="@style/AuthBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbitsdmp.app.ui.SignUpActivity">
+    tools:context="com.racecondition.ribbitsdm.app.ui.SignUpActivity">
 
     <ImageView
         android:id="@+id/backgroundImage"
