--- a/app/src/main/res/layout/user_grid.xml
+++ b/app/src/main/res/layout/user_grid.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.racecondition.ribbitsdmp.app.ui.MainActivity$PlaceholderFragment">
+    tools:context="com.racecondition.ribbitsdm.app.ui.MainActivity$PlaceholderFragment">
 
 
     <GridView
