--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,9 @@
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
+  
           http://www.apache.org/licenses/LICENSE-2.0
-
+  
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,7 +17,8 @@
      limitations under the License.
 -->
 
-<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <style name="Theme.Ribbit" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarItemBackground">@drawable/selectable_background_ribbit</item>
         <item name="android:popupMenuStyle">@style/PopupMenu.Ribbit</item>
@@ -58,9 +59,7 @@
     <style name="ActionBar.Solid.Ribbit.TitleTextStyle"
         parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@color/text_color</item>
-
     </style>
-
 
     <style name="ActionBar.Transparent.Ribbit" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">@drawable/ab_transparent_ribbit</item>
@@ -99,17 +98,11 @@
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Ribbit</item>
     </style>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
-
-    </style>
-
-
     <style name="AuthBackground">
         <item name="android:background">@drawable/background_fill</item>
     </style>
 
     <style name="AuthBackgroundImage">
-        <item name="android:contentDescription">@string/content_desc_background</item>
         <item name="android:scaleType">fitStart</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -131,9 +124,9 @@
     </style>
 
     <style name="AuthTitle.AuthSubTitle">
+        <item name="android:textSize">13sp</item>
         <item name="android:layout_below">@+id/title</item>
         <item name="android:text">@string/subtitle</item>
-        <item name="android:textSize">13sp</item>
         <item name="android:layout_alignParentTop">false</item>
         <item name="android:layout_marginTop">0dp</item>
     </style>
@@ -153,32 +146,33 @@
         <item name="android:layout_below">@id/subtitle</item>
     </style>
 
-    <style name="AuthEditText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="AuthEditText" parent="android:Widget.Holo.Light.EditText">
         <item name="android:ems">10</item>
         <item name="android:textColorHint">@color/light_gray</item>
         <item name="android:textSize">17sp</item>
-
-    </style>
-
-    <style name="AuthButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-
-        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
-        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
-        <item name="android:background">@drawable/button_custom</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="android:textSize">13sp</item>
     </style>
 
+    <style name="AuthButton" parent="android:Widget.Holo.Light.Button">
+        <item name="android:background">@drawable/button_custom</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
     <style name="GridImage">
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitXY</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_alignParentTop">true</item>
-        <item name="android:scaleType">fitXY</item>
-        <item name="android:adjustViewBounds">true</item>
     </style>
 </resources>
+
+
+
+
